--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -50,7 +50,7 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Copyright (C) 2015 by Alex Rav"
+                android:text="Copyright (C) 2015-2017 by Alex Rav"
                 android:id="@+id/textView5"
                 android:textColor="@color/primary_text"
                 android:textStyle="bold"
@@ -122,7 +122,7 @@
                 android:id="@+id/textView8"
                 android:textColor="@color/primary_text"
                 android:autoLink="web"
-                android:text="https://github.com/alr888rav/alr.com.tasks.git"/>
+                android:text="https://bitbucket.org/alex_rav/tasks"/>
 
         </LinearLayout>
     </ScrollView>
